data/derived/sp14/progs/unify/prog4138.ml.out
Characters 394-414:
  (sin(pi*.eval(e,x,y)) + cos(pi*.eval(e,x,y)))*cos(pi*.eval(e,x,y));;
   ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
